--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "debug": "^4.3.2",
+    "is-string-and-not-blank": "0.0.2",
     "json5": "^2.1.1"
   },
   "devDependencies": {
