--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "config",
-  "version": "3.3.6",
+  "name": "parsed-config",
+  "version": "1.0.0",
   "main": "./lib/config.js",
-  "description": "Configuration control for production node deployments",
-  "author": "Loren West <open_source@lorenwest.com>",
-  "homepage": "http://lorenwest.github.com/node-config",
+  "description": "Configuration control and parsing for production node deployments",
+  "author": "Alexey T",
+  "homepage": "https://github.com/MyNameIz/parsed-config",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -43,7 +43,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/lorenwest/node-config.git"
+    "url": "https://github.com/MyNameIz/parsed-config"
   },
   "engines": {
     "node": ">= 10.0.0"
